# Signal-bot

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATABASE.md  DATA_SOURCES.md  FILE_HYGIENE.md  GIT_WORKFLOW.md  PHASES.md  README.md  RESEARCH.md  RESUME_INDEX.md  TECH_STACK.md  pyproject.toml  requirements-dev.txt  requirements.txt
branches/: _template.md  main.md
docs/: deep_owl_v0_1_0.docx  deep_owl_v1.docx  deep_owl_v1.md
scripts/: bootstrap.ps1  branch_audit.py  check_session_sync.py  generate_docx.js  install_git_hooks.ps1  pre_deploy_audit.py
scripts/hooks/: pre-commit
src/deep_owl/: __init__.py  cli.py  config.py  logger.py
src/deep_owl/connectors/: __init__.py  base.py  registry.py
src/deep_owl/connectors/announcements/: __init__.py  binance_rss.py  bybit_scrape.py  coinbase_scrape.py  okx_scrape.py
src/deep_owl/connectors/cex/: __init__.py
src/deep_owl/connectors/parent/: __init__.py  recorder_reader.py
src/deep_owl/core/: __init__.py  config.py  logger.py  types.py
src/deep_owl/core/db/: __init__.py  (+2 more)
src/deep_owl/data/: __init__.py  models.py
src/deep_owl/data_models/: __init__.py  connectors.py  filters.py  normalized.py  processed.py  signals.py
src/deep_owl/db/: __init__.py  client.py  schema.sql
src/deep_owl/engines/: __init__.py  backtest_breakout_consolidation.py  backtest_funding_squeeze.py  backtest_rsi_divergence.py  backtest_volume_spike.py  base.py  bid_ask_imbalance_engine.py  cross_exchange_engine.py  cross_validation_engine.py  fees_engine.py  filter_set_engine.py  funding_skew_engine.py  liquidation_imbalance_engine.py  metrics_engine.py  new_listings_detector_engine.py  oi_buildup_engine.py  slippage_engine.py  social_velocity_engine.py  tier_classifier_engine.py  universe_filter_engine.py  volume_profile_engine.py  walk_forward_engine.py  ws_rest_divergence_engine.py
src/deep_owl/modules/: __init__.py
src/deep_owl/orchestrator/: __init__.py  backfill_orchestrator.py  module1_orchestrator.py  module2_orchestrator.py  module3_orchestrator.py  pipeline.py  sanity_reconcile_orchestrator.py  universe_orchestrator.py
src/deep_owl/output/: __init__.py  paper_trader.py  telegram_bot.py
src/deep_owl/parallelism/: __init__.py  batch_executor.py  pool.py  rate_limiter.py  stream_multiplexer.py
src/deep_owl/processors/: __init__.py
tests/unit/: test_smoke.py
(+54 files in other folders)
