[project]
name = "deep-owl"
version = "0.1.0"
description = "Breakout signals bot — early-stage accumulation + fresh projects monitor + backtesting (DEX-first multi-chain, paper trading)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kuba" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
deep-owl = "deep_owl.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deep_owl = ["db/schema.sql"]

# === Ruff: linter + formatter ===
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line-too-long (formatter handles)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# === mypy: static type checking ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src/deep_owl"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "telegram.*"]
ignore_missing_imports = true

# === pytest ===
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (DB, network)",
    "slow: slow tests (>1s)",
]

# === coverage ===
[tool.coverage.run]
source = ["src/deep_owl"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
